--- a/config/name.yaml.example
+++ b/config/name.yaml.example
@@ -1,7 +1,7 @@
 # 控制本 config 文件是否启用
 enable: true
 # token 必填
-token: ""
+token: "${{ secrets.KURO_TOKEN }}"
 #是否完整，不完整默认系统自动补全
 completed: false
 # 是否自动补签
@@ -14,14 +14,14 @@ retry_times: 3
 game_info:
 
   # distinct_id 和 devCode 可选，系统会随机生成
-  distinct_id: ""
-  devcode: ""
+  distinct_id: "${{ secrets.KURO_DISTINCT_ID }}"
+  devcode: "${{ secrets.KURO_DEVCODE }}"
   # wwroleId：鸣潮 ID（可选，默认系统获取）
-  wwroleId: 
+  wwroleId: "${{ secrets.KURO_WWROLE_ID }}"
   # eeeroleId：战双 ID（可选，默认系统获取）
-  eeeroleId: 
+  eeeroleId: "${{ secrets.KURO_EEEROLE_ID }}"
 
 # 用户信息
 user_info:
   # 库街区 bbs ID（可选，默认系统获取）
-  userId: ""
+  userId: "${{ secrets.KURO_USER_ID }}"
